--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -72,3 +72,7 @@ AppliedDefaultGraphicsPerformance=Maximum
 +CollisionChannelRedirects=(OldName="VehicleMovement",NewName="Vehicle")
 +CollisionChannelRedirects=(OldName="PawnMovement",NewName="Pawn")
 
+[/Script/Engine.RendererSettings]
+r.VirtualTextures=True
+r.GenerateMeshDistanceFields=True
+
