Particle system and material change
Chest material change when entering zone and try some particle system

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,6 +3,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Maps/Main-map_PL.Main-map_PL
 EditorStartupMap=/Game/Maps/Main-map_PL.Main-map_PL
+GlobalDefaultGameMode=/Game/Core/GM_Base.GM_Base_C
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
