--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -89,6 +89,8 @@ DoubleClickTime=0.200000
 +AxisMappings=(AxisName="Right_movement",Scale=-1.000000,Key=Left)
 +AxisMappings=(AxisName="Use_weapon_right",Scale=1.000000,Key=P)
 +AxisMappings=(AxisName="Use_weapon_left",Scale=1.000000,Key=None)
++AxisMappings=(AxisName="Mouse_movement_x",Scale=1.000000,Key=MouseX)
++AxisMappings=(AxisName="Mouse_movement_y",Scale=1.000000,Key=MouseY)
 DefaultPlayerInputClass=/Script/Engine.PlayerInput
 DefaultInputComponentClass=/Script/Engine.InputComponent
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
