I fucked up and fix it. Chest state version 1
I tried to do things in c++ and it wasnt posible so i did a back up and implement chest state in a version 1 with two states and works fine

--- a/rvGame.uproject
+++ b/rvGame.uproject
@@ -7,13 +7,22 @@
 		{
 			"Name": "rvGame",
 			"Type": "Runtime",
-			"LoadingPhase": "Default"
+			"LoadingPhase": "Default",
+			"AdditionalDependencies": [
+				"CoreUObject",
+				"Engine"
+			]
 		}
 	],
 	"Plugins": [
 		{
 			"Name": "Water",
 			"Enabled": true
+		},
+		{
+			"Name": "SMSystem",
+			"Enabled": true,
+			"MarketplaceURL": "com.epicgames.launcher://ue/marketplace/content/916643d0c665469594233cb0487e6d3d"
 		}
 	]
 }
