--- a/rvGame.uproject
+++ b/rvGame.uproject
@@ -23,6 +23,10 @@
 			"Name": "SMSystem",
 			"Enabled": true,
 			"MarketplaceURL": "com.epicgames.launcher://ue/marketplace/content/916643d0c665469594233cb0487e6d3d"
+		},
+		{
+			"Name": "StaticMeshEditorExtension",
+			"Enabled": true
 		}
 	]
 }
