--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -77,4 +77,10 @@ AppliedDefaultGraphicsPerformance=Maximum
 [/Script/Engine.RendererSettings]
 r.VirtualTextures=True
 r.GenerateMeshDistanceFields=True
+r.MobileMSAA=4
+r.MobileHDR=False
+vr.MobileMultiView=True
+
+[/Script/AndroidRuntimeSettings.AndroidRuntimeSettings]
+bPackageDataInsideApk=True
 
