dagger implementation finished v3

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -78,9 +78,13 @@ AppliedDefaultGraphicsPerformance=Maximum
 r.VirtualTextures=True
 r.GenerateMeshDistanceFields=True
 r.MobileMSAA=4
-r.MobileHDR=False
+r.MobileHDR=True
 vr.MobileMultiView=True
+vr.InstancedStereo=False
 
 [/Script/AndroidRuntimeSettings.AndroidRuntimeSettings]
 bPackageDataInsideApk=True
+PackageName=.com/ua_multimedia/tengo_que_buscar_un_nombre
+TargetSDKVersion=32
+MinSDKVersion=32
 
