black explosion niagara system

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -84,7 +84,7 @@ vr.InstancedStereo=False
 
 [/Script/AndroidRuntimeSettings.AndroidRuntimeSettings]
 bPackageDataInsideApk=True
-PackageName=.com/ua_multimedia/tengo_que_buscar_un_nombre
+PackageName=com.ua_multimedia.no_name
 TargetSDKVersion=32
 MinSDKVersion=32
 
