--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -83,6 +83,11 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Use_weapon_left",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Q)
 +ActionMappings=(ActionName="Use_weapon_right",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=OculusTouch_Right_Trigger_Click)
 +ActionMappings=(ActionName="Use_weapon_left",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=OculusTouch_Left_Trigger_Click)
++ActionMappings=(ActionName="Interact",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=OculusTouch_Left_FaceButton2)
++ActionMappings=(ActionName="Change_weapon_left",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftMouseButton)
++ActionMappings=(ActionName="Change_weapon_right",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=RightMouseButton)
++ActionMappings=(ActionName="Change_weapon_left",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=OculusTouch_Left_Grip_Click)
++ActionMappings=(ActionName="Change_weapon_right",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=OculusTouch_Right_Grip_Click)
 +AxisMappings=(AxisName="Forward_movement",Scale=1.000000,Key=W)
 +AxisMappings=(AxisName="Forward_movement",Scale=1.000000,Key=Up)
 +AxisMappings=(AxisName="Right_movement",Scale=1.000000,Key=D)
