--- a/rvGame.uproject
+++ b/rvGame.uproject
@@ -27,6 +27,10 @@
 		{
 			"Name": "StaticMeshEditorExtension",
 			"Enabled": true
+		},
+		{
+			"Name": "Text3D",
+			"Enabled": true
 		}
 	]
 }
