Fix some bugs with the change of the default ini

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -9,7 +9,7 @@ ProjectName=IDK
 Build=IfProjectHasCode
 BuildConfiguration=PPBC_Development
 BuildTarget=
-StagingDirectory=(Path="C:/Users/Usuario/Desktop/PackageRV")
+StagingDirectory=(Path="C:/Users/Usuario/Desktop/PackageRV/Nueva carpeta")
 FullRebuild=False
 ForDistribution=False
 IncludeDebugFiles=False
@@ -74,5 +74,5 @@ bSkipMovies=False
 +IniKeyBlacklist=EncryptionKey
 +IniKeyBlacklist=IniKeyBlacklist
 +IniKeyBlacklist=IniSectionBlacklist
-+MapsToCook=(FilePath="/Game/Maps/Main-map_PL")
++MapsToCook=(FilePath="/Game/Maps/TestingMap")
 
