--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -3,7 +3,7 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=3CF4C27644059F58FD7BE2AC7F92062D
 bStartInVR=True
-ProjectName=IDK
+ProjectName=Nowhere
 
 [/Script/UnrealEd.ProjectPackagingSettings]
 Build=IfProjectHasCode
